--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,23 @@
-html{font-size: 62.5%;}
+html{
+    font-size: 62.5%;
+}
+body{min-height:100vh;
+display:flex;
+flex-direction:column;}
+section{flex-grow:1;}
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
 
 /* =========================================================================
                                 Classe générique
-========================================================================= */
+========================================================================= /
 
     /* =========================================================================
                                     Margin & Padding
     ========================================================================= */
     .ptb-50{padding: 50px 0;}
-    
+    .no-margin{margin:0;}
+    .no-padding{padding:0;}
     /* =========================================================================
                                     Height + Width
     ========================================================================= */
@@ -24,11 +31,18 @@ html{font-size: 62.5%;}
     .fs-20{font-size:2rem;}
     .fs-15{font-size:1.5rem;}
     .ubuntu{font-family: 'Ubuntu', sans-serif;}
-
-
-    /* =========================================================================
+/* =========================================================================
                                 Color & Background/filtre & border
     ========================================================================= */
+
+    .color1{color:#F6490D;}
+    .color2{color:#000249;}
+    .color3{color:#1DCED8;}
+    .color4{color:#FAF9F0;}
+    .bgcolor1{background-color:#F6490D;}
+    .bgcolor2{background-color:#000249;}
+    .bgcolor3{background-color:#1DCED8;}
+    .bgcolor4{background-color:#FAF9F0;}
 
     /* =========================================================================
                                     Géneral Générique
@@ -38,3 +52,4 @@ html{font-size: 62.5%;}
 /* =========================================================================
                                 Classe Spécifique
 ========================================================================= */
+nav a{color:#fff;}
