--- a/css/style.css
+++ b/css/style.css
@@ -30,14 +30,15 @@ html{font-size: 62.5%;}
                                 Color & Background/filtre & border
     ========================================================================= */
 
-    .color1{color:#F6490D;}
-    .color2{color:#000249;}
-    .color3{color:#1DCED8;}
-    .color4{color:#FAF9F0;}
+    .color1{color:#F6490D;} /* orange */
+    .color2{color:#000;} /* noir */
+    .color3{color:#FAF9F0;} /* blanc léger */
+
+
     .bgcolor1{background-color:#F6490D;}
     .bgcolor2{background-color:#000249;}
     .bgcolor3{background-color:#1DCED8;}
-    .bgcolor4{background-color:#FAF9F0;}    
+    .bgcolor4{background-color: #F5F5F5;}
 
     /* =========================================================================
                                     Géneral Générique
@@ -47,3 +48,5 @@ html{font-size: 62.5%;}
 /* =========================================================================
                                 Classe Spécifique
 ========================================================================= */
+
+nav a {color:#fff;}
