--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
 html{
     font-size: 62.5%;
 }
 body{min-height:100vh;
 display:flex;
-flex-direction:column;}
+flex-direction:column;
+font-family: 'Ubuntu', sans-serif;}
 section{flex-grow:1;}
-@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
 
 
 /* =========================================================================
@@ -16,6 +19,8 @@ section{flex-grow:1;}
                                     Margin & Padding
     ========================================================================= */
     .ptb-50{padding: 50px 0;}
+
+    .pt-30{padding-top: 30px;}
     .no-margin{margin:0;}
     .no-padding{padding:0;}
     /* =========================================================================
@@ -30,7 +35,7 @@ section{flex-grow:1;}
     .fs-30{font-size:3rem;}
     .fs-20{font-size:2rem;}
     .fs-15{font-size:1.5rem;}
-    .ubuntu{font-family: 'Ubuntu', sans-serif;}
+
 /* =========================================================================
                                 Color & Background/filtre & border
     ========================================================================= */
@@ -39,6 +44,7 @@ section{flex-grow:1;}
     .color2{color:#000249;}
     .color3{color:#1DCED8;}
     .color4{color:#FAF9F0;}
+
     .bgcolor1{background-color:#F6490D;}
     .bgcolor2{background-color:#000249;}
     .bgcolor3{background-color:#1DCED8;}
