modifs css sur la nav

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,10 @@ html{
 }
 body{min-height:100vh;
 display:flex;
-flex-direction:column;}
-section{flex-grow:1;}
+flex-direction:column;
+font-family: 'Ubuntu', sans-serif;}
+section{flex-grow:1;
+}
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
 
@@ -30,7 +32,6 @@ section{flex-grow:1;}
     .fs-30{font-size:3rem;}
     .fs-20{font-size:2rem;}
     .fs-15{font-size:1.5rem;}
-    .ubuntu{font-family: 'Ubuntu', sans-serif;}
 /* =========================================================================
                                 Color & Background/filtre & border
     ========================================================================= */
@@ -55,3 +56,6 @@ section{flex-grow:1;}
 ========================================================================= */
 
 nav a {color:#fff;}
+footer a{color:#fff;}
+nav a:hover{color:#1DCED8;
+transition: 0.5s all ease;}
