--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@ section{flex-grow:1;
     .ptb-30{padding:30px 0;}
     .ptb-50{padding: 50px 0;}
 
+    .ml-15{margin-left: 15px;}
+    
     .mt-20{margin-top:20px;}
 
     .pt-30{padding-top: 30px;}
